# ai-deep-scribe

./: .gitignore  Makefile  README.md  docker-compose.yml  langgraph.json
deep-scribe/: .dockerignore  .env.example  Dockerfile  pyproject.toml
deep-scribe/src/cms_service/domain/: errors.py
ekona/: .env.example  pyproject.toml
ekona/src/cms_service/domain/graphs/create_post_graph/: create_post_graph.py
ekona/src/cms_service/domain/graphs/create_post_graph/nodes/: clarify_with_user_node.py  generate_post_node.py
ekona/src/cms_service/domain/graphs/create_post_graph/state/: agent_state.py
ekona/src/cms_service/domain/graphs/execute_subtopic_research_graph/: execute_subtopic_research_graph.py
ekona/src/cms_service/domain/graphs/execute_subtopic_research_graph/nodes/: search_subtopic_node.py  summarize_search_results_node.py
ekona/src/cms_service/domain/graphs/execute_subtopic_research_graph/state/: topic_research_execution_state.py
ekona/src/cms_service/domain/graphs/orchestrate_research_graph/: orchestrate_research_graph.py
ekona/src/cms_service/domain/graphs/orchestrate_research_graph/nodes/: execute_research_node.py  plan_research_node.py
ekona/src/cms_service/domain/prompts/baml_src/: ask_for_clarification.baml  clients.baml  generate_post.baml  plan_research.baml  write_research_brief.baml
ekona/src/cms_service/domain/services/: search_engine.py  utils.py
ekona/src/cms_service/infrastructure/: config.py  di.py
web-ui/: Dockerfile  nginx.conf  package-lock.json  package.json
web-ui/src/: App.tsx  index.css
(+32 files in other folders)
