[project]
name = "ekona"
version = "0.1.0"
description = "Ekona Project"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "langchain>=0.3.18",
    "langchain-core>=0.3.34",
    "langgraph>=0.2.70",
    "opik>=1.4.11",
    "pydantic-settings>=2.7.1",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "baml-py==0.202.0",
    "punq>=0.7.0",
    "click>=8.1.7",
    "pytest-asyncio>=1.1.0",
    "pymongo>=4.13.2",
    "langgraph-cli[inmem]>=0.3.1",
    "langchain-openai>=0.3.7",
    "debugpy>=1.8.14",
    "tavily-python>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.7.2",
    "pre-commit>=4.1.0",
    "black>=25.1.0",
    "debugpy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cms_service", "src/common"]

[tool.ruff]
target-version = "py313"

[tool.black]
line-length = 140

[project.scripts]
ekona = "cms_service.cms_service.infrastructure.cli:main"
